--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <p style="text-align:center">
                 <name>Harman Singh</name>
               </p>
-              <p>I am a researcher at <a href="https://research.google/teams/india-research-lab/">Google DeepMind</a>, working on large scale multimodal and multilingual modelling with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the Languages team. 
+              <p>I am a researcher at <a href="https://research.google/teams/india-research-lab/">Google DeepMind</a>, working on Gemini with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the Languages team. I focus on Alignment, Reasoning, and Multimodal Modeling. I also contribute to improving Multilinguality. My work has been used in Gemma 3, Gemini 2.5 Pro and 2.0 models.
               </p>
               <p>Previously, I was an AI Resident at <a href=" https://ai.facebook.com/">Meta AI</a> where I worked on reasoning abilities of Vision Language Models.
                 Before this, I completed my undergrad from <a href="https://home.iitd.ac.in/">Indian Institute of Technology, Delhi</a>, advised by <a href="https://www.cse.iitd.ac.in/~parags/">Prof. Parag Singla</a>.
@@ -35,7 +35,7 @@
                 <a href="https://github.com/HarmanDotpy/">Github</a>
               </p>
             </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
+            <td style="padding:2.5%;width:30%;max-width:30%">
               <a href="images/harman_cookie.jpg"><img style="width:80%;max-width:80%" alt="profile photo" src="images/harman_cookie.jpg" onclick="return false;"></a>
             </td>
           </tr>
@@ -46,7 +46,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I am interested in multimodal modeling, reasoning, post-training and long-context capabilities of foundation models. Along with this, I am interested in building inclusive language technologies that can benefit a broader range of users.
+                I am interested in alignment, (efficient) reasoning, multimodal modeling of foundation models. I am also interested in building inclusive language technologies that can benefit a broader range of users.
               </p>
             </td>
           </tr>
@@ -54,8 +54,26 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-          <tr height="300px">
-            <td style="padding:20px;width:35%;vertical-align:middle">
+          <tr height="50px">
+            <td style="padding:20px;width:30%;vertical-align:middle">
+              <img src="images/gemini2p5pro.png" alt="Gemini2p5" width="100%" >
+            </td>
+            <td width="100%" valign="middle">
+              <a href="https://storage.googleapis.com/deepmind-media/gemini/gemini_v2_5_report.pdf">
+                <papertitle>Gemini 2.5 Pro and Gemini 2.0</papertitle>
+              </a>
+              <br>
+              Gemini Team (Including <strong>Harman Singh</strong></a>)
+              <br>
+              <br>
+              <strong>Contributed to Multimodality and Multilinguality</strong></a>
+              <br>
+              <a href="https://storage.googleapis.com/deepmind-media/gemini/gemini_v2_5_report.pdf">Gemini 2.5 Pro Technical Report</a> | <a href="https://blog.google/products/gemini/gemini-2-5-model-family-expands/">Google Blog (Gemini 2.5 Pro)</a> | <a href="https://blog.google/technology/google-deepmind/google-gemini-ai-update-december-2024/">Google Blog (Gemini 2.0)</a>
+            </td>
+          </tr>
+
+          <tr height="200px">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               <img src="images/gemma3.png" alt="Gemma" width="100%" >
             </td>
             <td width="100%" valign="middle">
@@ -63,14 +81,36 @@
                 <papertitle>Gemma 3</papertitle>
               </a>
               <br>
-              <strong>Contributor</strong></a>
+              Gemma Team (Including <strong>Harman Singh</strong></a>)
               <br>
-              <a href="https://blog.google/technology/developers/gemma-3/">Google Blog</a> | <a href="https://storage.googleapis.com/deepmind-media/gemma/Gemma3Report.pdf">Gemma 3 Technical Report</a>
+              <br>
+              <strong>Contributed to Multilinguality</strong></a>
+              <br>
+              <a href="https://storage.googleapis.com/deepmind-media/gemma/Gemma3Report.pdf">Gemma 3 Technical Report</a> | <a href="https://blog.google/technology/developers/gemma-3/">Google Blog</a>
             </td>
           </tr>
 
-          <tr height="300px">
-            <td style="padding:20px;width:35%;vertical-align:middle">
+          <tr height="200px">
+            <td style="padding:20px;width:30%;vertical-align:middle">
+              <img src="images/causal_rob_rm.png" alt="causal_rob_rm" width="100%" >
+            </td>
+            <td width="100%" valign="middle">
+              <a href="https://arxiv.org/abs/2506.16507">
+                <papertitle>Robust Reward Modeling via Causal Rubrics</papertitle>
+              </a>
+              <br>
+              Pragya Srivastava*, <strong>Harman Singh*</strong>, Rahul Madhavan*, Gandharv Patil, Sravanti Addepalli, Arun Suggala, Rengarajan Aravamudhan, Soumya Sharma, Anirban Laha, Aravindan Raghuveer, Karthikeyan Shanmugam, Doina Precup</a>
+              <br>
+              <br>
+              <strong>Under Review, 2025</strong>
+              <br>
+              <em><a href="https://dataworldicml2025.github.io/">DataWorld Workshop</a> and <a href="https://sites.google.com/corp/view/mhf-icml2025">Models of Human Feedback for AI Alignment (MoFA) Workshop</a> at ICML 2025</em>
+              <p>Developing robust reward models having reduced reliance on spurious attributes and higher sensitivity to causal attributes (rubrics).</p>
+            </td>
+          </tr>
+
+          <tr height="200px">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               <img src="images/IndicGenBench.png" alt="IndicGenBench" width="100%" >
             </td>
             <td width="100%" valign="middle">
@@ -88,8 +128,8 @@
             </td>
           </tr>
 
-          <tr height="300px">
-            <td style="padding:20px;width:35%;vertical-align:middle">
+          <tr height="200px">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               <img src="images/MosaiCLIP_2.png" alt="MosaiCLIP" width="100%" >
             </td>
             <td width="100%" valign="middle">
@@ -110,8 +150,8 @@
             </td>
           </tr>
 
-          <tr height="300px">
-            <td style="padding:20px;width:35%;vertical-align:middle">
+          <tr height="200px">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               <img src="images/multi-hop-ke.png" alt="Multi-Hop-KE" width="100%" >
             </td>
             <td width="100%" valign="middle">
@@ -128,8 +168,8 @@
             </td>
           </tr>
 
-          <tr height="300px">
-            <td style="padding:20px;width:35%;vertical-align:middle">
+          <tr height="200px">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               <img src="images/NeuroSIM.png" alt="NeuroSIM" width="100%" >
             </td>
             <td width="100%" valign="middle">
@@ -146,8 +186,8 @@
             </td>
           </tr>
 
-          <tr height="300px">
-            <td style="padding:20px;width:35%;vertical-align:middle">
+          <tr height="200px">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               <img src="images/fairr.png" alt="fairr" width="100%" >
             </td>
             <td width="100%" valign="middle">
@@ -164,8 +204,8 @@
             </td>
           </tr>
 
-          <tr height="300px">
-            <td style="padding:20px;width:35%;vertical-align:middle">
+          <tr height="200px">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               <img src="images/STAB.png" alt="STAB" width="100%" >
             </td>
             <td width="100%" valign="middle">
@@ -192,8 +232,8 @@
             </td>
           </tr>
 
-          <tr height="300px">
-            <td style="padding:20px;width:35%;vertical-align:middle">
+          <tr height="200px">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               <img src="images/covid-paper-nature-image.png" alt="covid-paper-nature-image" width="100%" >
             </td>
             <td width="100%" valign="middle">
@@ -209,8 +249,8 @@
             </td>
           </tr>
 
-          <tr height="300px">
-            <td style="padding:20px;width:35%;vertical-align:middle">
+          <tr height="200px">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               <img src="images/e-MSN-isbra.png" alt="e-MSN-isbra" width="100%" >
             </td>
             <td width="100%" valign="middle">
@@ -229,22 +269,22 @@
 
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
-            <td style="padding:20px;width:35%;vertical-align:middle">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               Reviewer for ICLR 2023, NeurIPS 2023, EMNLP 2023, MLRC 2022 <span style="color: red;">(Outstanding Reviewer Award)</span>, COLM 2024, ACL Rolling Review (ARR) 2024 (Feb, April, June)
             </td>
           </tr>
           <tr>
-            <td style="padding:20px;width:35%;vertical-align:middle">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               Teaching Assitant for Machine Learning (Dr. Sumeet Agarwal and Dr. Jayadeva, Fall 2021)
             </td>
           </tr>
           <tr>
-            <td style="padding:20px;width:35%;vertical-align:middle">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               Teaching Assitant for Intro. to EE (Dr. Anuj Dhawan, Fall 2021)
             </td>
           </tr>
           <tr>
-            <td style="padding:20px;width:35%;vertical-align:middle">
+            <td style="padding:20px;width:30%;vertical-align:middle">
               Demo Leader, NeurIPS Education Outreach Program (for 240+ high school students), NeurIPS 2022
             </td>
           </tr>
