--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
               <p style="text-align:center">
                 <name>Harman Singh</name>
               </p>
-              <p>I am a researcher at <a href="https://research.google/teams/india-research-lab/">Google DeepMind</a>, working on Gemini with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the Languages team. I focus on Alignment, Reasoning, and Multimodal Modeling. I also contribute to improving Multilinguality. My work has been used in Gemma 3, Gemini 2.5 Pro and 2.0 models.
+              <p>I am a PhD student at UC Berkeley. I am working on Reasoning, Agents and Diffusion Language Models.
               </p>
-              <p>Previously, I was an AI Resident at <a href=" https://ai.facebook.com/">Meta AI</a> where I worked on reasoning abilities of Vision Language Models.
-                Before this, I completed my undergrad from <a href="https://home.iitd.ac.in/">Indian Institute of Technology, Delhi</a>, advised by <a href="https://www.cse.iitd.ac.in/~parags/">Prof. Parag Singla</a>.
-                During this time, I have been a research intern at <a href="https://inklab.usc.edu/">InkLab, USC</a>, advised by <a href="https://shanzhenren.github.io/">Prof. Xiang Ren</a> and 
-                a research intern at <a href="https://research.ibm.com/artificial-intelligence">IBM Research AI</a>. <br>  
+              <p>
+                Previously, I did research at <a href="https://research.google/teams/india-research-lab/">Google DeepMind</a>, working on Gemini with <a href="https://parthatalukdar.github.io/">Dr. Partha Talukdar</a> in the Languages team. I focused on Alignment, Reasoning, and Multimodal Modeling. I also contributed to improving Multilinguality. My work has been used in Gemini 3.0, Gemma 3, Gemini 2.5 Pro and 2.0 models.
+              </p>
+
+              <p>Before that, I was an AI Resident at <a href=" https://ai.facebook.com/">FAIR, Meta </a> where I worked on reasoning abilities of Vision Language Models. I completed my undergrad from <a href="https://home.iitd.ac.in/">Indian Institute of Technology, Delhi</a>, advised by <a href="https://www.cse.iitd.ac.in/~parags/">Prof. Parag Singla</a>. During this time, I was a research intern at <a href="https://inklab.usc.edu/">InkLab, USC</a>, advised by <a href="https://shanzhenren.github.io/">Prof. Xiang Ren</a> and a research intern at <a href="https://research.ibm.com/artificial-intelligence">IBM Research AI</a>. <br>  
               </p> 
               <p style="text-align:center">
                 <a href="mailto:harmansingh.iitd@gmail.com">Email</a> &nbsp/&nbsp
@@ -41,7 +42,7 @@
           </tr>
         </tbody></table>
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>Research</h2>
@@ -50,7 +51,7 @@
               </p>
             </td>
           </tr>
-        </tbody></table>
+        </tbody></table> -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
